--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 axum = { version = "0.5.17", features = ["headers"] }
 serde = { version = "1.0.203", features = ["derive"] }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.4.4", features = ["cors"] }
