--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Example .env file
-DATABASE_URL=postgres://USERNAME:PASSWORD@localhost/DATABASE
+DATABASE_URL=postgres://postgres:keyoarbcat@localhost/postgres
