--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6.1", features = ["headers", "macros"] }
-bcrypt = "0.13.0"
-chrono = { version = "0.4.23", features = ["serde"] }
-dotenvy = "0.15.6"
-dotenvy_macro = "0.15.1"
-jsonwebtoken = "8.1.1"
-sea-orm = { version = "0.10.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
-serde = { version = "1.0.147", features = ["derive"] }
-serde_with = "2.1.0"
-tokio = { version = "1.21.2", features = ["full"] }
-validator = { version = "0.16.0", features = ["derive"] }
+axum = { version = "0.7.5", features = ["macros"] }
+axum-extra = {version = "0.9.3", features = ["typed-header"]}
+bcrypt = "0.15.1"
+chrono = { version = "0.4.38", features = ["serde"] }
+dotenvy = "0.15.7"
+dotenvy_macro = "0.15.7"
+jsonwebtoken = "9.3.0"
+sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_with = "3.8.3"
+tokio = { version = "1.38.0", features = ["full"] }
+validator = { version = "0.18.1", features = ["derive"] }
